# Video2Humanoid-Retarget

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: smoke.yml
configs/: config.yaml  extractor.yaml  retarget.yaml  simulator.yaml
docs/: API.md  FINAL_REPORT.md  ROADMAP.md  architecture.md  pipeline.drawio
environment/: README.md
examples/: file3_existing_hpe.yaml  file4_existing_hpe.yaml  file5_existing_hpe.yaml
pipeline/: README.md
scripts/: check_environment.sh  download_dependencies.sh  install.sh  open_retarget_demo.sh  run_pipeline.sh
tests/: test_imports.py
tools/: annotate_head_height_video.py  export_g1_kinematic_usd.py  export_g1_robot_npy.py  export_gem_soma_bvh.py  export_robot_head_heights.py  ground_align_g1_csv.py  render_gem_global_aligned.py
video2humanoid/: cli.py  config.py  interfaces.py  logging_utils.py  pipeline.py  registry.py
video2humanoid/extractors/: gemx.py
video2humanoid/retargeters/: soma_g1.py
video2humanoid/simulators/: isaac_kinematic.py
video2humanoid/utils/: subprocess.py
